crates/rome_js_formatter/tests/specs/prettier/js/sloppy-mode/labeled-function-declaration.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: labeled-function-declaration.js

---
# Input
```js
foo: function bar() {}

```

# Output
```js
foo: function bar() {}

```

# Errors
```
error[SyntaxError]: In strict mode code, functions can only be declared at top level or inside a block
  ┌─ labeled-function-declaration.js:1:6
  │
1 │ foo: function bar() {}
  │      ^^^^^^^^^^^^^^^^^ wrap the function in a block statement


```


